Fixed purple variant top bar color on mobile

--- a/TangerineUI-purple.css
+++ b/TangerineUI-purple.css
@@ -837,7 +837,7 @@ body.layout-single-column  {
     background-color: var(--color-accent-bg);
 }
 .layout-single-column .status-card__image {
-    background: rgba(249, 191, 164, 0.5);
+    background: var(--color-content-secondary-bg);
 }
 .layout-single-column .status__content p {
     margin-bottom: 12px;
@@ -1090,7 +1090,7 @@ body.layout-single-column  {
     .layout-single-column .ui:after { /* Set a backdrop blur background to both top bars */
         -webkit-backdrop-filter: blur(12px);
         backdrop-filter: blur(12px);
-        background-color: rgba(245, 242, 239, 0.75);
+        background-color: rgba(242, 239, 245, .75);
         content: "";
         height: 55px;
         left: 0;
@@ -1114,7 +1114,7 @@ body.layout-single-column  {
 @media (prefers-color-scheme: dark) {
     @media screen and (max-width:1174px) {
         .layout-single-column .ui:after {
-            background-color: rgba(24, 24, 25, 0.7);
+            background-color: rgb(25, 25, 26, .7);
         }
     }
 }
